--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   }
 
   body{
-      background-color: #0f0f0f;
+      background-color: #000;
       font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
       margin: 0;
       font-weight: 300;
@@ -13,7 +13,6 @@
   }
   
 .banner{
-    background-image: url(img/banner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
